--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
     "react-syntax-highlighter": "^15.6.1",
-    "web-vitals": "^4.2.4",
-    "react-icons": "^4.7.1"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
